--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 data/*
 */hc/*
 */results/*
+!*/results/*.png
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
 
