--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ dmypy.json
 .venv/
 
 # End of https://www.gitignore.io/api/python
+.vscode
+flipkart-grid.sublime-project
+flipkart-grid.sublime-workspace
